# kde-coherent-color-scheme

./: CMakeLists.txt  LICENSE  README.md
lib/: ColorReader.cpp  ColorReader.h  ConfigLoader.cpp  ConfigLoader.h  DycolorConfigKeys.h  KdeColorsLoader.h  Logger.cpp  Logger.h  ioutils.h  main.cpp
resource/: colors  full_map_dycolor.colors  myconfig.txt
shell/: color-config-injector  color-config.txt  color-scheme-updator  dycolor-config.ini  dycolor-theme-manager  dycolor-theme-manager.sh  start-daemon.sh  stop-daemon.sh
test/: .last_wallpaper  My_dark_color.colors  color-config.txt  color-scheme-updator  dy_config_loader  dycolor-config.ini  dycolor-theme-manager  dycolor-theme-manager.sh  dynamic_color.colors  target-color-config.colors  testupdator.sh
